Finished JS code

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
     <header>
       <header>
+        <nav>
+          <a href="sales.html"><h3>Sales</h3></a>
+        </nav>
         <h1>Salmon Cookies</h1>
         <p>Serving the best since 2023.</p>
         <img src="image/theFish.png" alt="The most beatiful fish.">
