--- a/sales.html
+++ b/sales.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <main></main>
+    <header>
+      <nav>
+        <a href="index.html"><h3>Home Page</h3></a>
+      </nav>
+    </header>
+    <main>
+      <h2>Seattle Sales</h2>
+      <ul id="seattleSales"></ul>
+    </main>
     <footer>
       <p>Made for Code Fellows class seattle-code-201d98a</p>
       <script src="js/app.js"></script>
