Finished JS app

--- a/sales.html
+++ b/sales.html
@@ -16,6 +16,14 @@
     <main>
       <h2>Seattle Sales</h2>
       <ul id="seattleSales"></ul>
+      <h2>Tokyo Sales</h2>
+      <ul id="tokyoSales"></ul>
+      <h2>Dubai Sales</h2>
+      <ul id="dubaiSales"></ul>
+      <h2>Paris Sales</h2>
+      <ul id="parisSales"></ul>
+      <h2>Lima Sales</h2>
+      <ul id="limaSales"></ul>
     </main>
     <footer>
       <p>Made for Code Fellows class seattle-code-201d98a</p>
