Added contact page and more structure

--- a/index.html
+++ b/index.html
@@ -9,16 +9,32 @@
   </head>
   <body>
     <header>
-      <header>
-        <nav>
-          <a href="sales.html"><h3>Sales</h3></a>
-        </nav>
-        <h1>Pat's Salmon Cookies</h1>
-        <p>Serving the best since 2023.</p>
-        <img src="image/theFish.png" alt="The most beatiful fish.">
-      </header>
+      <nav>
+        <img src="image/fish.jpg" alt="A fish">
+        <a href="sales.html"><h3>Sales</h3></a>
+        <a href="contact-us.html"><h3>Contact Us</h3></a>
+      </nav>
+      <h1>Pat's Salmon Cookies</h1>
+      <p>Serving the best since 2023.</p>
+      <img src="image/theFish.png" alt="The most beautiful fish.">
     </header>
-    <main></main>
+    
+    <main>
+      <section>
+        <h2>Hours of Operation</h2>
+        <p>6:00 AM to 8:00 PM daily</p>
+        <h2>Locations</h2>
+        <h3>Seattle</h3>
+        <h3>Tokyo</h3>
+        <h3>Dubai</h3>
+        <h3>Paris</h3>
+        <h3>Lima</h3>
+        
+      </section>
+      <section>
+        <a href="/contact-us.html"><h3>Contact US</h3></a>
+      </section>
+    </main>
     <footer>
       <p>Made for Code Fellows class seattle-code-201d98a</p>
       <script src="js/app.js"></script>
