--- a/sales.html
+++ b/sales.html
@@ -10,10 +10,14 @@
   <body>
     <header>
       <nav>
+        <img src="image/fish.jpg" alt="A fish">
         <a href="index.html"><h3>Home Page</h3></a>
+        <a href="contact-us.html"><h3>Contact Us</h3></a>
       </nav>
     </header>
     <main>
+      <img src="image/frosted-cookie.jpg" alt="A Salmon Cookie">
+      <h1>Hourly Sales by Store</h1>
       <table id="storeSales">
 
       </table>
