Added all images

--- a/index.html
+++ b/index.html
@@ -16,24 +16,31 @@
       </nav>
       <h1>Pat's Salmon Cookies</h1>
       <p>Serving the best since 2023.</p>
-      <img src="image/theFish.png" alt="The most beautiful fish.">
+      <img class="main-pic" src="image/theFish.png" alt="The most beautiful fish.">
     </header>
     
     <main>
-      <section>
+      <section class="left">
         <h2>Hours of Operation</h2>
         <p>6:00 AM to 8:00 PM daily</p>
         <h2>Locations</h2>
         <h3>Seattle</h3>
+        <p>1900 2nd Ave S, Seattle, WA 98134</p>
         <h3>Tokyo</h3>
+        <p>Japan, 〒103-0029 Tokyo, Chuo City, Nihonbashi, 2 Chome−11−2 髙島屋S.C.東館5F</p>
         <h3>Dubai</h3>
+        <p>57F4+7JW - Al Quoz - Al Quoz 1 - Dubai - United Arab Emirates</p>
         <h3>Paris</h3>
+        <p>26 R. des Martyrs, 75018 Paris, France</p>
         <h3>Lima</h3>
+        <p>Av. Gral. Antonio Alvarez de Arenales 999, Lima 15046, Peru</p>
         
       </section>
-      <section>
+      <section class="right">
         <a href="/contact-us.html"><h3>Contact US</h3></a>
+        <img src="image/cutter.jpeg" alt="A cookie cutter">
       </section>
+      <img src="image/chinook.jpg" alt="One more fish" class="center-image">
     </main>
     <footer>
       <p>Made for Code Fellows class seattle-code-201d98a</p>
