--- a/sales.html
+++ b/sales.html
@@ -10,18 +10,19 @@
   <body>
     <header>
       <nav>
-        <img src="image/fish.jpg" alt="A fish">
+        <img src="image/fish.jpg" alt="A fish" >
         <a href="index.html"><h3>Home Page</h3></a>
         <a href="contact-us.html"><h3>Contact Us</h3></a>
       </nav>
     </header>
     <main>
-      <img src="image/frosted-cookie.jpg" alt="A Salmon Cookie">
+      <img src="image/frosted-cookie.jpg" alt="A Salmon Cookie" class="center-image">
       <h1>Hourly Sales by Store</h1>
       <table id="storeSales">
 
       </table>
-
+<h1>More Items to Come Soon!</h1>
+<img src="image/shirt.jpg" alt="A shirt" class="center-image">
 
       
     </main>
