Changed lists and added CSS

--- a/contact-us.html
+++ b/contact-us.html
@@ -13,17 +13,19 @@
 <body>
   <header>
     <nav>
-      <img src="image/fish.jpg" alt="A fish">
-      <a href="index.html"><h3>Home Page</h3></a>
-      <a href="sales.html"><h3>Sales</h3></a>
+      <img src="image/fish.jpg" alt="A fish" >
+      <a href="index.html"><li>Home</li></a>
+      <a href="sales.html"><li>Sales</li></a>
+      <a href="contact-us.html"><li>Contact Us</li></a>
     </nav>
   </header>
   <main>
-<img src="image/family.jpg" alt="A nice looking family">
+<img src="image/family.jpg" alt="A nice looking family" class="center-image">
 <h1>Contact us</h1>
   </main>
   <footer>
-
+    <p>Made for Code Fellows class seattle-code-201d98a</p>
+    <script src="js/app.js"></script>
   </footer>
 </body>
 </html>
