--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
   <body>
     <header>
       <nav>
-        <img src="image/fish.jpg" alt="A fish">
-        <a href="sales.html"><h3>Sales</h3></a>
-        <a href="contact-us.html"><h3>Contact Us</h3></a>
+        <img src="image/fish.jpg" alt="A fish" >
+        <a href="index.html"><li>Home</li></a>
+        <a href="sales.html"><li>Sales</li></a>
+        <a href="contact-us.html"><li>Contact Us</li></a>
       </nav>
       <h1>Pat's Salmon Cookies</h1>
       <p>Serving the best since 2023.</p>
-      <img class="main-pic" src="image/theFish.png" alt="The most beautiful fish.">
+      <img class="center-image" src="image/theFish.png" alt="The most beautiful fish.">
     </header>
     
     <main>
