--- a/sales.html
+++ b/sales.html
@@ -14,8 +14,9 @@
     <header>
       <nav>
         <img src="image/fish.jpg" alt="A fish" >
-        <a href="index.html"><h3>Home Page</h3></a>
-        <a href="contact-us.html"><h3>Contact Us</h3></a>
+        <a href="index.html"><li>Home</li></a>
+        <a href="sales.html"><li>Sales</li></a>
+        <a href="contact-us.html"><li>Contact Us</li></a>
       </nav>
     </header>
     <main>
