--- a/index.html
+++ b/index.html
@@ -13,17 +13,27 @@
   <body>
     <header>
       <nav>
-        <img src="image/fish.jpg" alt="A fish" >
-        <a href="index.html"><li>Home</li></a>
-        <a href="sales.html"><li>Sales</li></a>
-        <a href="contact-us.html"><li>Contact Us</li></a>
+        <ul class="nav-list">
+          <img src="image/fish.jpg" alt="A fish" >
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+          <a href="sales.html">Sales</a>
+        </li>
+        <li>
+          <a href="contact-us.html">Contact Us</a>
+        </li>
+      </ul>
       </nav>
-      <h1>Pat's Salmon Cookies</h1>
-      <p>Serving the best since 2023.</p>
-      <img class="center-image" src="image/theFish.png" alt="The most beautiful fish.">
     </header>
     
     <main>
+      <section class="hero">
+        <h1>Pat's Salmon Cookies</h1>
+        <p>Serving the best since 2023.</p>
+        <img class="center-image" src="image/theFish.png" alt="The most beautiful fish.">
+      </section>    
       <section class="left">
         <h2>Hours of Operation</h2>
         <p>6:00 AM to 8:00 PM daily</p>
