Fixed header issue

--- a/contact-us.html
+++ b/contact-us.html
@@ -11,22 +11,22 @@
 <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Space+Mono&family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
-  header>
-      <nav>
-        <ul class="nav-list">
-          <img src="image/fish.jpg" alt="A fish" >
-          <li>
-            <a href="index.html">Home</a>
-          </li>
-          <li>
-          <a href="sales.html">Sales</a>
+  <header>
+    <nav>
+      <ul class="nav-list">
+        <img src="image/fish.jpg" alt="A fish" >
+        <li>
+          <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="contact-us.html">Contact Us</a>
-        </li>
-      </ul>
-      </nav>
-    </header>
+        <a href="sales.html">Sales</a>
+      </li>
+      <li>
+        <a href="contact-us.html">Contact Us</a>
+      </li>
+    </ul>
+    </nav>
+  </header>
   <main>
 <img src="image/family.jpg" alt="A nice looking family" class="center-image">
 <h1>Contact us</h1>
