--- a/sales.html
+++ b/sales.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Space+Mono&family=Tilt+Warp&display=swap" rel="stylesheet">
   </head>
   <body>
-    header>
+    <header>
       <nav>
         <ul class="nav-list">
           <img src="image/fish.jpg" alt="A fish" >
