Added table listener

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
       </section>    
       <section class="left">
         <h2>Hours of Operation</h2>
-        <p>6:00 AM to 8:00 PM daily</p>
-        <h2>Locations</h2>
+        <p>6:00 AM to 8:00 PM daily</p><br>
+        <h2>Locations</h2><br>
         <h3>Seattle</h3>
-        <p>1900 2nd Ave S, Seattle, WA 98134</p>
+        <p>1900 2nd Ave S, Seattle, WA 98134</p><br>
         <h3>Tokyo</h3>
-        <p>Japan, 〒103-0029 Tokyo, Chuo City, Nihonbashi, 2 Chome−11−2 髙島屋S.C.東館5F</p>
+        <p>Japan, 〒103-0029 Tokyo, Chuo City, Nihonbashi, 2 Chome−11−2 髙島屋S.C.東館5F</p><br>
         <h3>Dubai</h3>
-        <p>57F4+7JW - Al Quoz - Al Quoz 1 - Dubai - United Arab Emirates</p>
+        <p>57F4+7JW - Al Quoz - Al Quoz 1 - Dubai - United Arab Emirates</p><br>
         <h3>Paris</h3>
-        <p>26 R. des Martyrs, 75018 Paris, France</p>
+        <p>26 R. des Martyrs, 75018 Paris, France</p><br>
         <h3>Lima</h3>
         <p>Av. Gral. Antonio Alvarez de Arenales 999, Lima 15046, Peru</p>
         
